<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patient_info"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/patient_information" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_outline"
            android:title="@string/facilities_map" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_outline"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_chat_outline"
            android:title="@string/connect" />
        <item
            android:id="@+id/nav_patient_list"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/patient_list" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_outline"
            android:title="@string/settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_outline"
            android:title="@string/logout" />
    </group>
</menu>