<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patient_info"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/patient_information" />
        <item
            android:id="@+id/nav_diagnosis"
            android:icon="@drawable/ic_heart_icon"
            android:title="Diagnosis" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_outline"
            android:title="@string/facilities_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_outline"
            android:title="@string/settings" />
    </group>
</menu>