<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context="team7.seshealthpatient.Activities.LoginActivity">

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/whiteColor" /> -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoMain"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp">

                <EditText
                    android:id="@+id/loginEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_top"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_mail_outline"
                    android:hint="@string/email_txt"
                    android:inputType="textEmailAddress"
                    android:padding="7dp"
                    android:textSize="25sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/loginPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bottom"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_lock_outline"
                    android:hint="@string/password_txt"
                    android:inputType="textPassword"
                    android:padding="7dp"
                    android:textSize="25sp" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/loginBtn"
                style="@style/LoginStyles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/log_in_txt" />

            <TextView
                android:id="@+id/forgotPwTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="Forgot your password?" />

            <TextView
                android:id="@+id/navToRegisterTV"
                style="@style/LoginStyles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="Don't have an account?" />

            <Button
                android:id="@+id/navToRegisterBtn"
                style="@style/LoginStyles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Join Now" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
